# FYS3150_projects

./: .gitignore  .gitmodules  README.md  main.cpp
Project1/: .gitignore  CMakeLists.txt  all.sh  run.sh
Project1/Solutions/: plotting.ipynb  problem2  problem2.cpp  problem2data.txt
Project1/Solutions/md/: problem1.md
Project1/intro_cpp/: Helloworld.cpp
Project1/solutions/: plotting.ipynb  problem2.cpp  problem7.cpp  thomas_alg.py
Project2/: CMakeLists.txt  all.sh
Project2/.sh/: configure.sh  run.sh
Project2/projectInfo/: README.md
Project2/projectInfo/pyEnvYaml/: proj2env.yaml
Project2/solutions/: p2.cpp  p2.h  p3.cpp  p3.h  p4.cpp  p4.h  p5.cpp  p6.cpp  plotting.ipynb
Project3/: CMakeLists.txt  all_main_p3.sh  all_p3.sh  all_test_p3.sh
Project3/.sh/: run_main_p3.sh  run_p3.sh  run_test_p3.sh
Project3/include/: Particle.hpp  PenningTrap.hpp  Solver.hpp
Project3/projectInfo/: README.md
Project3/solutions/: main.cpp  plotting.ipynb  problem_8.cpp  problem_9.cpp  specific_solution.py  test.cpp
Project3/src/: Particle.cpp  Particle.h  PenningTrap.cpp  PenningTrap.h  Solver.cpp
Project4/: CMakeLists.txt  all_test_p4.sh
Project4/include/: Monte_carlo.hpp
Project4/projectInfo/: README.md
Project4/solutions/: Problem 1.ipynb  test.cpp
Project4/src/: Monte_carlo.cpp
intro_cpp/: CMakeLists.txt  Helloworld  Helloworld.cpp  variables  variables.cpp
intro_cpp/LibDemo/src/cpp/: CMakeLists.txt  adder.cpp  adder.h
intro_cpp/LibDemo/testTheLib/: CMakeLists.txt  test.cpp
